<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2B313B"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/good_morning"
            android:textColor="#fff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/do_more_with_accounts"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/manage_trips_make_changes_save_cards_and_faster_refunds"
            android:textColor="#c0c0c0"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/angry_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:text="@string/sign_in_or_register"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#ECECEC"
            android:gravity="center|left"
            android:padding="10dp"
            android:text="@string/bookings"
            android:textColor="#777777"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/suitcase_travel" />

            <TextView
                android:id="@+id/your_trips_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img"
                android:padding="2dp"
                android:text="@string/your_trips_and_bookings_reside_here" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/your_trips_txt"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img"
                android:padding="2dp"
                android:text="@string/sign_in_to_access_them" />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_lock_outline_black" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#ECECEC"
            android:gravity="center|left"
            android:padding="10dp"
            android:text="@string/account"
            android:textColor="#777777"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <ImageView
                android:id="@+id/refereal_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/suitcase_travel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/refereal_img"
                android:text="@string/referrals"
                android:textColor="#777777"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_lock_outline_black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <ImageView
                android:id="@+id/express_way_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/suitcase_travel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/express_way_img"
                android:text="@string/expressway"
                android:textColor="#777777"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_lock_outline_black"

                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <ImageView
                android:id="@+id/wallets_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/suitcase_travel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/wallets_img"
                android:text="@string/wallets"
                android:textColor="#777777"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_lock_outline_black" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>